# halld_recon

./: .gitignore  CMakeLists.txt  JEventProcessor_highlevel_online.cc  JEventProcessor_highlevel_online.h  LED_TriggerHist.C  README.md  halld_recon_prereqs_version.xml  setenv.csh
src/: CMakeLists.txt  SConstruct  SConstruct3  dana_rest.hddm  jana-upgrade.py
src/BMS/: Makefile.DANA  osrelease.pl
src/SBMS/: SConstruct.plugin  osrelease.pl  sbms.py  sbms3.py  sbms_Darwin.py  sbms_setenv.py
src/cmake/: FindEVIO.cmake  FindJANA.cmake  FindXercesC.cmake
src/include/: jerror.h
src/libraries/: CMakeLists.txt  DFCALShower_factory.cc  Makefile  SConscript
src/libraries/ANALYSIS/: ANALYSIS_init.cc  DAnalysisAction.cc  DAnalysisAction.h  DAnalysisResults.h  DAnalysisResults_factory.cc  DAnalysisResults_factory.h  DAnalysisUtilities.cc  DAnalysisUtilities.h  DAnalysisUtilities_factory.h  DChargedTrack_factory_Combo.cc  DChargedTrack_factory_Combo.h  DCutActions.cc  DCutActions.h  DDetectorMatches_factory_Combo.cc  DDetectorMatches_factory_Combo.h  DEventWriterROOT.cc  DEventWriterROOT.h  DEventWriterROOT_factory.h  DHistogramActions_Independent.cc  DHistogramActions_Independent.h  DHistogramActions_Reaction.cc  DHistogramActions_Reaction.h  DHistogramActions_Thrown.cc  DHistogramActions_Thrown.h  DKinFitResults.h  DKinFitUtils_GlueX.cc  DKinFitUtils_GlueX.h  DMCThrownMatching.h  DMCThrownMatching_factory.cc  DMCThrownMatching_factory.h  DNeutralParticle_factory_Combo.cc  DNeutralParticle_factory_Combo.h  DParticleComboCreator.cc  DParticleComboCreator.h  DParticleComboStep.h  DReaction.cc  DReaction.h  DReactionStep.cc  DReactionStep.h  DReactionVertexInfo.h  (+18 more)
src/libraries/BCAL/: BCAL_init.cc  DBCALClump.h  DBCALClump_factory.cc  DBCALClump_factory.h  DBCALCluster.cc  DBCALCluster.h  DBCALCluster_factory.cc  DBCALCluster_factory.h  DBCALCluster_factory_SINGLE.cc  DBCALCluster_factory_SINGLE.h  DBCALDigiHit.h  DBCALGeometry.cc  DBCALGeometry.h  DBCALGeometry_factory.h  DBCALHit.h  DBCALHit_factory.cc  DBCALHit_factory.h  DBCALIncidentParticle.h  DBCALPoint.cc  DBCALPoint.h  DBCALPoint_factory.cc  DBCALPoint_factory.h  DBCALShower.h  DBCALShower_factory.h  DBCALShower_factory_CURVATURE.cc  DBCALShower_factory_CURVATURE.h  DBCALShower_factory_IU.cc  DBCALShower_factory_IU.h  DBCALShower_factory_JLAB.cc  DBCALShower_factory_JLAB.h  DBCALShower_factory_KLOE.cc  DBCALShower_factory_KLOE.h  DBCALSiPMHit.h  DBCALSiPMSpectrum.h  DBCALTDCDigiHit.h  DBCALTDCHit.h  DBCALTDCHit_factory.cc  DBCALTDCHit_factory.h  DBCALTruthCell.h  DBCALTruthShower.h  (+3 more)
src/libraries/CCAL/: CCAL_init.cc  DCCALCluster.cc  DCCALCluster.h  DCCALCluster_factory.cc  DCCALCluster_factory.h  DCCALDigiHit.h  DCCALGeometry.cc  DCCALGeometry.h  DCCALGeometry_factory.h  DCCALHit.h  DCCALHit_factory.cc  DCCALHit_factory.h  DCCALRefDigiHit.h  DCCALShower.cc  DCCALShower.h  DCCALShower_factory.cc  DCCALShower_factory.h  DCCALTruthShower.h  DCCALTruthShower_factory.cc  DCCALTruthShower_factory.h  SConscript  adcgam_bk.inc  ccal.h  cphoto.inc  hycal.h  island.F  mc_com.F
src/libraries/CDC/: CDC_init.cc  DCDCDigiHit.h  DCDCHit.h  DCDCHit_factory.cc  DCDCHit_factory.h  DCDCHit_factory_Calib.cc  DCDCHit_factory_Calib.h  DCDCTrackHit.h  DCDCTrackHit_factory.cc  DCDCTrackHit_factory.h  DCDCWire.h
src/libraries/CERE/: CERE_init.cc  DCereHit.h
src/libraries/CGEM/: CGEM_init.cc  DCGEMDigiHit.h  DCGEMHit.h  DCGEMHit_factory.cc  DCGEMHit_factory.h  DCGEMTruthHit.h
src/libraries/DANA/: DANARootErrorHandler.h  DApplication.cc  DApplication.h  DEvent.h  DFactoryGenerator.cc  DFactoryGenerator.h  DGeometryManager.cc  DGeometryManager.h  DObjectID.h  DStatusBits.h  JExceptionDataFormat.h  cint.h  jerror.h
src/libraries/DAQ/: DAQ_init.cc  DBORptrs.h  DBadHit.h  DBeamCurrent.h  DBeamCurrent_factory.cc  DBeamCurrent_factory.h  DBeamHelicity.h  DBeamHelicity_factory.cc  DBeamHelicity_factory.h  DBeamHelicity_factory_CORRECTED.cc  DBeamHelicity_factory_CORRECTED.h  DCAEN1290TDCBORConfig.h  DCAEN1290TDCConfig.h  DCAEN1290TDCHit.h  DCODAControlEvent.h  DCODAEventInfo.h  DCODAROCInfo.h  DDAQAddress.h  DDAQConfig.h  DDIRCADCHit.h  DDIRCTDCHit.h  DDIRCTriggerTime.h  DEPICSvalue.h  DEVIOWorkerThread.cc  DEVIOWorkerThread.h  DEventTag.h  DF1TDCBORConfig.h  DF1TDCConfig.h  DF1TDCHit.h  DF1TDCTriggerTime.h  DGEMSRSWindowRawData.h  DHELIDigiHit.h  DHelicityData.h  DHelicityDataTriggerTime.h  DL1Info.h  DModuleType.h  DParsedEvent.h  DTSGBORConfig.h  DTSscalers.h  Df125BORConfig.h  (+55 more)
src/libraries/DIRC/: DDIRCGeometry.cc  DDIRCGeometry.h  DDIRCGeometry_factory.h  DDIRCLEDRef.h  DDIRCLEDRef_factory.cc  DDIRCLEDRef_factory.h  DDIRCLut.cc  DDIRCLut.h  DDIRCLutPhotons.h  DDIRCLutReader.cc  DDIRCLutReader.h  DDIRCLut_factory.h  DDIRCPmtHit.h  DDIRCPmtHit_factory.cc  DDIRCPmtHit_factory.h  DDIRCTDCDigiHit.h  DDIRCTruthBarHit.h  DDIRCTruthPmtHit.h  DIRC_init.cc
src/libraries/ECAL/: DECALCluster.h  DECALCluster_factory.cc  DECALCluster_factory.h  DECALDigiHit.h  DECALGeometry.cc  DECALGeometry.h  DECALGeometry_factory.h  DECALHit.h  DECALHit_factory.cc  DECALHit_factory.h  DECALRefDigiHit.h  DECALShower.h  DECALShower_factory.cc  DECALShower_factory.h  DECALTruthShower.h  DECALTruthShower_factory.cc  DECALTruthShower_factory.h  ECAL_init.cc  ecal.h
src/libraries/EVENTSTORE/: DESDBProvider.h  DESDBProviderMySQL.cc  DESDBProviderMySQL.h  DESSkimData.h  DEventSourceEventStore.cc  DEventSourceEventStore.h  DEventSourceEventStoreGenerator.cc  DEventSourceEventStoreGenerator.h  DEventStoreEvent.h  EVENTSTORE_init.cc
src/libraries/FCAL/: DFCALCluster.cc  DFCALCluster.h  DFCALCluster_factory.cc  DFCALCluster_factory.h  DFCALCluster_factory_Island.cc  DFCALCluster_factory_Island.h  DFCALDigiHit.h  DFCALGeometry.cc  DFCALGeometry.h  DFCALGeometry_factory.cc  DFCALGeometry_factory.h  DFCALHit.h  DFCALHit_factory.cc  DFCALHit_factory.h  DFCALShower.cc  DFCALShower.h  DFCALShower_factory.cc  DFCALShower_factory.h  DFCALTruthShower.h  FCAL_init.cc
src/libraries/FDC/: DFDCGeometry.h  (+22 more)
src/plugins/: CMakeLists.txt  SConscript
src/programs/: CMakeLists.txt  SConscript
(+1681 files in other folders)
