
set(HALLD_RECON_SOURCES

        ANALYSIS/ANALYSIS_init.cc
        ANALYSIS/DAnalysisAction.cc
        ANALYSIS/DAnalysisAction.h
        ANALYSIS/DAnalysisResults.h
        ANALYSIS/DAnalysisResults_factory.cc
        ANALYSIS/DAnalysisResults_factory.h
        ANALYSIS/DAnalysisUtilities.cc
        ANALYSIS/DAnalysisUtilities.h
        ANALYSIS/DAnalysisUtilities_factory.h
        ANALYSIS/DChargedTrack_factory_Combo.cc
        ANALYSIS/DChargedTrack_factory_Combo.h
        ANALYSIS/DCutActions.cc
        ANALYSIS/DCutActions.h
        ANALYSIS/DDetectorMatches_factory_Combo.cc
        ANALYSIS/DDetectorMatches_factory_Combo.h
        ANALYSIS/DEventWriterROOT.cc
        ANALYSIS/DEventWriterROOT.h
        ANALYSIS/DEventWriterROOT_factory.h
        ANALYSIS/DHistogramActions.h
        ANALYSIS/DHistogramActions_Independent.cc
        ANALYSIS/DHistogramActions_Independent.h
        ANALYSIS/DHistogramActions_Reaction.cc
        ANALYSIS/DHistogramActions_Reaction.h
        ANALYSIS/DHistogramActions_Thrown.cc
        ANALYSIS/DHistogramActions_Thrown.h
        ANALYSIS/DKinFitResults.h
        ANALYSIS/DKinFitUtils_GlueX.cc
        ANALYSIS/DKinFitUtils_GlueX.h
        ANALYSIS/DMCThrownMatching.h
        ANALYSIS/DMCThrownMatching_factory.cc
        ANALYSIS/DMCThrownMatching_factory.h
        ANALYSIS/DNeutralParticle_factory_Combo.cc
        ANALYSIS/DNeutralParticle_factory_Combo.h
        ANALYSIS/DParticleCombo.h
        ANALYSIS/DParticleComboCreator.cc
        ANALYSIS/DParticleComboCreator.h
        ANALYSIS/DParticleComboStep.h
        ANALYSIS/DReaction.cc
        ANALYSIS/DReaction.h
        ANALYSIS/DReaction_factory_Thrown.cc
        ANALYSIS/DReaction_factory_Thrown.h
        ANALYSIS/DReactionStep.cc
        ANALYSIS/DReactionStep.h
        ANALYSIS/DReactionStepVertexInfo.cc
        ANALYSIS/DReactionStepVertexInfo.h
        ANALYSIS/DReactionVertexInfo.h
        ANALYSIS/DReactionVertexInfo_factory.cc
        ANALYSIS/DReactionVertexInfo_factory.h
        ANALYSIS/DSourceCombo.h
        ANALYSIS/DSourceComboer.cc
        ANALYSIS/DSourceComboer.h
        ANALYSIS/DSourceComboP4Handler.cc
        ANALYSIS/DSourceComboP4Handler.h
        ANALYSIS/DSourceComboTimeHandler.cc
        ANALYSIS/DSourceComboTimeHandler.h
        ANALYSIS/DSourceComboVertexer.cc
        ANALYSIS/DSourceComboVertexer.h
        ANALYSIS/DTrackTimeBased_factory_Combo.cc
        ANALYSIS/DTrackTimeBased_factory_Combo.h
        ANALYSIS/DTreeInterface.cc
        ANALYSIS/DTreeInterface.h
        ANALYSIS/DTreeInterfaceObjects.h

        BCAL/BCAL_init.cc
        BCAL/DBCALClump.cc
        BCAL/DBCALClump.h
        BCAL/DBCALClump_factory.cc
        BCAL/DBCALClump_factory.h
        BCAL/DBCALCluster.cc
        BCAL/DBCALCluster.h
        BCAL/DBCALCluster_factory.cc
        BCAL/DBCALCluster_factory.h
        BCAL/DBCALCluster_factory_SINGLE.cc
        BCAL/DBCALCluster_factory_SINGLE.h
        BCAL/DBCALDigiHit.h
        BCAL/DBCALGeometry.cc
        BCAL/DBCALGeometry.h
        BCAL/DBCALGeometry_factory.h
        BCAL/DBCALHit.h
        BCAL/DBCALHit_factory.cc
        BCAL/DBCALHit_factory.h
        BCAL/DBCALIncidentParticle.h
        BCAL/DBCALPoint.cc
        BCAL/DBCALPoint.h
        BCAL/DBCALPoint_factory.cc
        BCAL/DBCALPoint_factory.h
        BCAL/DBCALShower.h
        BCAL/DBCALShower_factory.h
        BCAL/DBCALShower_factory_CURVATURE.cc
        BCAL/DBCALShower_factory_CURVATURE.h
        BCAL/DBCALShower_factory_IU.cc
        BCAL/DBCALShower_factory_IU.h
        BCAL/DBCALShower_factory_JLAB.cc
        BCAL/DBCALShower_factory_JLAB.h
        BCAL/DBCALShower_factory_KLOE.cc
        BCAL/DBCALShower_factory_KLOE.h
        BCAL/DBCALSiPMHit.h
        BCAL/DBCALSiPMSpectrum.h
        BCAL/DBCALTDCDigiHit.h
        BCAL/DBCALTDCHit.h
        BCAL/DBCALTDCHit_factory.cc
        BCAL/DBCALTDCHit_factory.h
        BCAL/DBCALTruthCell.h
        BCAL/DBCALTruthShower.h
        BCAL/DBCALUnifiedHit.h
        BCAL/DBCALUnifiedHit_factory.cc
        BCAL/DBCALUnifiedHit_factory.h

        CCAL/CCAL_init.cc
        CCAL/DCCALDigiHit.h
        CCAL/DCCALGeometry.cc
        CCAL/DCCALGeometry.h
        CCAL/DCCALGeometry_factory.h
        CCAL/DCCALHit.h
        CCAL/DCCALHit_factory.cc
        CCAL/DCCALHit_factory.h
        CCAL/DCCALRefDigiHit.h
        CCAL/DCCALShower.cc
        CCAL/DCCALShower.h
        CCAL/DCCALShower_factory.cc
        CCAL/DCCALShower_factory.h
        CCAL/DCCALTruthShower.h
        CCAL/DCCALTruthShower_factory.cc
        CCAL/DCCALTruthShower_factory.h

        CDC/CDC_init.cc
        CDC/DCDCDigiHit.h
        CDC/DCDCHit.h
        CDC/DCDCHit_factory.cc
        CDC/DCDCHit_factory.h
        CDC/DCDCHit_factory_Calib.cc
        CDC/DCDCHit_factory_Calib.h
        CDC/DCDCTrackHit.h
        CDC/DCDCTrackHit_factory.cc
        CDC/DCDCTrackHit_factory.h
        CDC/DCDCWire.h


        CERE/DCereHit.h
        CERE/CERE_init.cc

        DANA/DANARootErrorHandler.cc
        DANA/DANARootErrorHandler.h
        DANA/DGeometryManager.cc
        DANA/DGeometryManager.h
        DANA/DEvent.h
        DANA/DApplication.cc
        DANA/DApplication.h
        DANA/DFactoryGenerator.cc
        DANA/DFactoryGenerator.h
        DANA/DObjectID.h
        DANA/DStatusBits.h
        DANA/JExceptionDataFormat.h
        DANA/ReadWriteLock.cc
        DANA/ReadWriteLock.h

        DAQ/async_filebuf.cc
        DAQ/async_filebuf.h
        DAQ/bor_roc.h
        DAQ/DAQ_init.cc
        DAQ/daq_param_type.h
        DAQ/DBeamCurrent.h
        DAQ/DBeamCurrent_factory.cc
        DAQ/DBeamCurrent_factory.h
        DAQ/DBORptrs.h
        DAQ/DCAEN1290TDCBORConfig.h
        DAQ/DCAEN1290TDCConfig.h
        DAQ/DCAEN1290TDCHit.h
        DAQ/DCODAControlEvent.h
        DAQ/DCODAEventInfo.h
        DAQ/DCODAROCInfo.h
        DAQ/DDAQAddress.h
        DAQ/DDAQConfig.h
        DAQ/DDIRCADCHit.h
        DAQ/DDIRCTDCHit.h
        DAQ/DDIRCTriggerTime.h
        DAQ/DEPICSvalue.h
        DAQ/DEventTag.h
        DAQ/DEVIOWorkerThread.cc
        DAQ/DEVIOWorkerThread.h
        DAQ/DF1TDCBORConfig.h
        DAQ/DF1TDCConfig.h
        DAQ/DF1TDCHit.h
        DAQ/DF1TDCTriggerTime.h
        DAQ/Df125BORConfig.h
        DAQ/Df125CDCPulse.h
        DAQ/Df125Config.h
        DAQ/Df125EmulatorAlgorithm.h
        DAQ/Df125EmulatorAlgorithm_factory.h
        DAQ/Df125EmulatorAlgorithm_factory_v2.h
        DAQ/Df125EmulatorAlgorithm_v2.cc
        DAQ/Df125EmulatorAlgorithm_v2.h
        DAQ/Df125FDCPulse.h
        DAQ/Df125PulseIntegral.h
        DAQ/Df125PulsePedestal.h
        DAQ/Df125PulseRawData.h
        DAQ/Df125PulseTime.h
        DAQ/Df125TriggerTime.h
        DAQ/Df125WindowRawData.h
        DAQ/Df250AsyncPedestal.h
        DAQ/Df250BORConfig.h
        DAQ/Df250Config.h
        DAQ/Df250EmulatorAlgorithm.h
        DAQ/Df250EmulatorAlgorithm_factory.h
        DAQ/Df250EmulatorAlgorithm_factory_v1.h
        DAQ/Df250EmulatorAlgorithm_factory_v2.h
        DAQ/Df250EmulatorAlgorithm_factory_v3.h
        DAQ/Df250EmulatorAlgorithm_v1.cc
        DAQ/Df250EmulatorAlgorithm_v1.h
        DAQ/Df250EmulatorAlgorithm_v2.cc
        DAQ/Df250EmulatorAlgorithm_v2.h
        DAQ/Df250EmulatorAlgorithm_v3.cc
        DAQ/Df250EmulatorAlgorithm_v3.h
        DAQ/Df250PulseData.h
        DAQ/Df250PulseIntegral.h
        DAQ/Df250PulsePedestal.h
        DAQ/Df250PulseRawData.h
        DAQ/Df250PulseTime.h
        DAQ/Df250Scaler.h
        DAQ/Df250StreamingRawData.h
        DAQ/Df250TriggerTime.h
        DAQ/Df250WindowRawData.h
        DAQ/Df250WindowSum.h
        DAQ/DGEMSRSWindowRawData.h
        DAQ/DL1Info.h
        DAQ/DModuleType.h
        DAQ/DParsedEvent.h
        DAQ/DTSGBORConfig.h
        DAQ/DTSscalers.h
        DAQ/HDET.cc
        DAQ/HDET.h
        DAQ/HDEVIO.cc
        DAQ/HDEVIO.h
        DAQ/JEventSource_EVIO.cc
        DAQ/JEventSource_EVIO.h
        DAQ/JEventSource_EVIOpp.cc
        DAQ/JEventSource_EVIOpp.h
        DAQ/JEventSourceGenerator_EVIO.cc
        DAQ/JEventSourceGenerator_EVIO.h
        DAQ/JEventSourceGenerator_EVIOpp.cc
        DAQ/JEventSourceGenerator_EVIOpp.h
        DAQ/JFactoryGenerator_DAQ.h
        DAQ/swap_bank.cc
        DAQ/swap_bank.h

        DIRC/DDIRCGeometry.cc
        DIRC/DDIRCGeometry.h
        DIRC/DDIRCGeometry_factory.h
        DIRC/DDIRCLEDRef.h
        DIRC/DDIRCLEDRef_factory.cc
        DIRC/DDIRCLEDRef_factory.h
        DIRC/DDIRCLut.cc
        DIRC/DDIRCLut.h
        DIRC/DDIRCLut_factory.h
        DIRC/DDIRCLutReader.cc
        DIRC/DDIRCLutReader.h
        DIRC/DDIRCPmtHit.h
        DIRC/DDIRCPmtHit_factory.cc
        DIRC/DDIRCPmtHit_factory.h
        DIRC/DDIRCTDCDigiHit.h
        DIRC/DDIRCTruthBarHit.h
        DIRC/DDIRCTruthPmtHit.h
        DIRC/DIRC_init.cc

        EVENTSTORE/DESDBProvider.h
        EVENTSTORE/DESDBProviderMySQL.cc
        EVENTSTORE/DESDBProviderMySQL.h
        EVENTSTORE/DESSkimData.h
        EVENTSTORE/DEventSourceEventStore.cc
        EVENTSTORE/DEventSourceEventStore.h
        EVENTSTORE/DEventSourceEventStoreGenerator.cc
        EVENTSTORE/DEventSourceEventStoreGenerator.h
        EVENTSTORE/DEventStoreEvent.h
        EVENTSTORE/EVENTSTORE_init.cc

        FCAL/DFCALCluster.cc
        FCAL/DFCALCluster.h
        FCAL/DFCALCluster_factory.cc
        FCAL/DFCALCluster_factory.h
        FCAL/DFCALCluster_factory_Island.cc
        FCAL/DFCALCluster_factory_Island.h
        FCAL/DFCALDigiHit.h
        FCAL/DFCALGeometry.cc
        FCAL/DFCALGeometry.h
        FCAL/DFCALGeometry_factory.cc
        FCAL/DFCALGeometry_factory.h
        FCAL/DFCALHit.h
        FCAL/DFCALHit_factory.cc
        FCAL/DFCALHit_factory.h
        FCAL/DFCALShower.cc
        FCAL/DFCALShower.h
        FCAL/DFCALShower_factory.cc
        FCAL/DFCALShower_factory.h
        FCAL/DFCALTruthShower.h
        FCAL/FCAL_init.cc

        FDC/DFDCCathode.h
        FDC/DFDCCathodeCluster.h
        FDC/DFDCCathodeCluster_factory.cc
        FDC/DFDCCathodeCluster_factory.h
        FDC/DFDCCathodeDigiHit.h
        FDC/DFDCGeometry.cc
        FDC/DFDCGeometry.h
        FDC/DFDCHit.h
        FDC/DFDCHit_factory.cc
        FDC/DFDCHit_factory.h
        FDC/DFDCIntersection.h
        FDC/DFDCIntersection_factory.cc
        FDC/DFDCIntersection_factory.h
        FDC/DFDCPseudo.h
        FDC/DFDCPseudo_factory.cc
        FDC/DFDCPseudo_factory.h
        FDC/DFDCPseudo_factory_WIRESONLY.cc
        FDC/DFDCPseudo_factory_WIRESONLY.h
        FDC/DFDCSegment.h
        FDC/DFDCSegment_factory.cc
        FDC/DFDCSegment_factory.h
        FDC/DFDCWire.h
        FDC/DFDCWireDigiHit.h
        FDC/FDC_init.cc

        FMWPC/DFMWPCTruthHit.h
        FMWPC/DFMWPCHit_factory.cc
        FMWPC/DFMWPCCluster_factory.cc
        FMWPC/DCTOFPoint_factory.cc
        FMWPC/DFMWPCMatchedTrack_factory.cc
        FMWPC/FMWPC_init.cc

        HDDM/DEventHitStatistics.h
        HDDM/DEventHitStatistics_factory.cc
        HDDM/DEventHitStatistics_factory.h
        HDDM/DEventSourceHDDM.cc
        HDDM/DEventSourceHDDM.h
        HDDM/DEventSourceHDDMGenerator.cc
        HDDM/DEventSourceHDDMGenerator.h
        HDDM/DEventSourceREST.cc
        HDDM/DEventSourceREST.h
        HDDM/DEventSourceRESTGenerator.cc
        HDDM/DEventSourceRESTGenerator.h
        HDDM/DEventWriterHDDM.cc
        HDDM/DEventWriterHDDM.h
        HDDM/DEventWriterHDDM_factory.h
        HDDM/DEventWriterREST.cc
        HDDM/DEventWriterREST.h
        HDDM/DEventWriterREST_factory.h
        HDDM/DMatrixPools.cc
        HDDM/HDDM_init.cc
        HDDM/hddm_s++.cpp   # TODO: This doesn't really belong here
        HDDM/hddm_r++.cpp

        HDGEOMETRY/DGeometry.cc
        HDGEOMETRY/DGeometry.h
        HDGEOMETRY/DLorentzDeflections.cc
        HDGEOMETRY/DLorentzDeflections.h
        HDGEOMETRY/DLorentzMapCalibDB.cc
        HDGEOMETRY/DLorentzMapCalibDB.h
        HDGEOMETRY/DMagneticFieldMap.h
        HDGEOMETRY/DMagneticFieldMapCalibDB.cc
        HDGEOMETRY/DMagneticFieldMapCalibDB.h
        HDGEOMETRY/DMagneticFieldMapConst.cc
        HDGEOMETRY/DMagneticFieldMapConst.h
        HDGEOMETRY/DMagneticFieldMapFineMesh.cc
        HDGEOMETRY/DMagneticFieldMapFineMesh.h
        HDGEOMETRY/DMagneticFieldMapNoField.cc
        HDGEOMETRY/DMagneticFieldMapNoField.h
        HDGEOMETRY/DMagneticFieldMapParameterized.cc
        HDGEOMETRY/DMagneticFieldMapParameterized.h
        HDGEOMETRY/DMagneticFieldMapPS.h
        HDGEOMETRY/DMagneticFieldMapPS2DMap.cc
        HDGEOMETRY/DMagneticFieldMapPS2DMap.h
        HDGEOMETRY/DMagneticFieldMapPSConst.cc
        HDGEOMETRY/DMagneticFieldMapPSConst.h
        HDGEOMETRY/DMagneticFieldMapSpoiled.cc
        HDGEOMETRY/DMagneticFieldMapSpoiled.h
        HDGEOMETRY/DMaterial.cc
        HDGEOMETRY/DMaterial.h
        HDGEOMETRY/DMaterialMap.cc
        HDGEOMETRY/DMaterialMap.h
        HDGEOMETRY/DRootGeom.cc
        HDGEOMETRY/DRootGeom.h

        KINFITTER/DKinFitChain.h
        KINFITTER/DKinFitChainStep.h
        KINFITTER/DKinFitConstraint.h
        KINFITTER/DKinFitConstraint_Mass.h
        KINFITTER/DKinFitConstraint_P4.h
        KINFITTER/DKinFitConstraint_Spacetime.h
        KINFITTER/DKinFitConstraint_Vertex.h
        KINFITTER/DKinFitParticle.h
        KINFITTER/DKinFitter.cc
        KINFITTER/DKinFitter.h
        KINFITTER/DKinFitUtils.cc
        KINFITTER/DKinFitUtils.h

        PAIR_SPECTROMETER/DLumi.cc
        PAIR_SPECTROMETER/DLumi.h
        PAIR_SPECTROMETER/DLumi_factory.h
        PAIR_SPECTROMETER/DPSCDigiHit.h
        PAIR_SPECTROMETER/DPSCHit.h
        PAIR_SPECTROMETER/DPSCHit_factory.cc
        PAIR_SPECTROMETER/DPSCHit_factory.h
        PAIR_SPECTROMETER/DPSCPair.h
        PAIR_SPECTROMETER/DPSCPair_factory.cc
        PAIR_SPECTROMETER/DPSCPair_factory.h
        PAIR_SPECTROMETER/DPSCTDCDigiHit.h
        PAIR_SPECTROMETER/DPSCTruthHit.h
        PAIR_SPECTROMETER/DPSDigiHit.h
        PAIR_SPECTROMETER/DPSGeometry.cc
        PAIR_SPECTROMETER/DPSGeometry.h
        PAIR_SPECTROMETER/DPSGeometry_factory.h
        PAIR_SPECTROMETER/DPSHit.h
        PAIR_SPECTROMETER/DPSHit_factory.cc
        PAIR_SPECTROMETER/DPSHit_factory.h
        PAIR_SPECTROMETER/DPSPair.h
        PAIR_SPECTROMETER/DPSPair_factory.cc
        PAIR_SPECTROMETER/DPSPair_factory.h
        PAIR_SPECTROMETER/DPSTruthHit.h
        PAIR_SPECTROMETER/PAIR_SPECTROMETER_init.cc


        PID/DBeamPhoton.h
        PID/DBeamPhoton_factory.cc
        PID/DBeamPhoton_factory.h
        PID/DBeamPhoton_factory_MCGEN.cc
        PID/DBeamPhoton_factory_MCGEN.h
        PID/DBeamPhoton_factory_TAGGEDMCGEN.cc
        PID/DBeamPhoton_factory_TAGGEDMCGEN.h
        PID/DBeamPhoton_factory_TRUTH.cc
        PID/DBeamPhoton_factory_TRUTH.h
        PID/DChargedTrack.h
        PID/DChargedTrack_factory.cc
        PID/DChargedTrack_factory.h
        PID/DChargedTrack_factory_PreSelect.cc
        PID/DChargedTrack_factory_PreSelect.h
        PID/DChargedTrackHypothesis.h
        PID/DChargedTrackHypothesis_factory.cc
        PID/DChargedTrackHypothesis_factory.h
        PID/DDetectorMatches.h
        PID/DDetectorMatches_factory.cc
        PID/DDetectorMatches_factory.h
        PID/DDetectorMatches_factory_WireBased.cc
        PID/DDetectorMatches_factory_WireBased.h
        PID/DEventRFBunch.h
        PID/DEventRFBunch_factory.cc
        PID/DEventRFBunch_factory.h
        PID/DEventRFBunch_factory_Calibrations.cc
        PID/DEventRFBunch_factory_Calibrations.h
        PID/DEventRFBunch_factory_CalorimeterOnly.cc
        PID/DEventRFBunch_factory_CalorimeterOnly.h
        PID/DEventRFBunch_factory_Thrown.cc
        PID/DEventRFBunch_factory_Thrown.h
        PID/DKinematicData.h
        PID/DKinematicPools.cc
        PID/DMCReaction.h
        PID/DMCThrown_factory_Decaying.cc
        PID/DMCThrown_factory_Decaying.h
        PID/DMCThrown_factory_FinalState.cc
        PID/DMCThrown_factory_FinalState.h
        PID/DMCThrown_factory_Primary.cc
        PID/DMCThrown_factory_Primary.h
        PID/DNeutralParticle.h
        PID/DNeutralParticle_factory.cc
        PID/DNeutralParticle_factory.h
        PID/DNeutralParticle_factory_PreSelect.cc
        PID/DNeutralParticle_factory_PreSelect.h
        PID/DNeutralParticleHypothesis.h
        PID/DNeutralParticleHypothesis_factory.cc
        PID/DNeutralParticleHypothesis_factory.h
        PID/DNeutralShower.h
        PID/DNeutralShower_factory.cc
        PID/DNeutralShower_factory.h
        PID/DNeutralShower_factory_HadronPreSelect.cc
        PID/DNeutralShower_factory_HadronPreSelect.h
        PID/DNeutralShower_factory_PreSelect.cc
        PID/DNeutralShower_factory_PreSelect.h
        PID/DNeutralShower_FCALQualityMLP.h
        PID/DParticleID.cc
        PID/DParticleID.h
        PID/DParticleID_factory.h
        PID/DParticleID_factory_PID1.h
        PID/DParticleID_PID1.cc
        PID/DParticleID_PID1.h
        PID/DVertex.h
        PID/DVertex_factory.cc
        PID/DVertex_factory.h
        PID/DVertex_factory_THROWN.cc
        PID/DVertex_factory_THROWN.h
        PID/PID_init.cc


        RF/DRFDigiTime.h
        RF/DRFTDCDigiTime.h
        RF/DRFTime.h
        RF/DRFTime_factory.cc
        RF/DRFTime_factory.h
        RF/DRFTime_factory_FDC.cc
        RF/DRFTime_factory_FDC.h
        RF/DRFTime_factory_PSC.cc
        RF/DRFTime_factory_PSC.h
        RF/DRFTime_factory_TAGH.cc
        RF/DRFTime_factory_TAGH.h
        RF/DRFTime_factory_TOF.cc
        RF/DRFTime_factory_TOF.h
        RF/RF_init.cc


        START_COUNTER/DSCDigiHit.h
        START_COUNTER/DSCHit.h
        START_COUNTER/DSCHit_factory.cc
        START_COUNTER/DSCHit_factory.h
        START_COUNTER/DSCTDCDigiHit.h
        START_COUNTER/DSCTruthHit.h
        START_COUNTER/START_COUNTER_init.cc


        TAC/DRebuildFromRawFADC_factory.cc
        TAC/DRebuildFromRawFADC_factory.h
        TAC/DTACDigiHit.cc
        TAC/DTACDigiHit.h
        TAC/DTACHit.cc
        TAC/DTACHit.h
        TAC/DTACHit_factory.cc
        TAC/DTACHit_factory.h
        TAC/DTACTDCDigiHit.cc
        TAC/DTACTDCDigiHit.h
        TAC/HitRebuilderByFit.cc
        TAC/HitRebuilderByFit.h
        TAC/HitRebuilderInterfaceTAC.cc
        TAC/HitRebuilderInterfaceTAC.h
        TAC/HitRebuilderTAC.cc
        TAC/HitRebuilderTAC.h
        TAC/TAC_init.cc
        TAC/WaveformErfcFunctor.cc
        TAC/WaveformErfcFunctor.h
        TAC/WaveformSpikeFunctor.cc
        TAC/WaveformSpikeFunctor.h

        TAGGER/DTAGHDigiHit.h
        TAGGER/DTAGHGeometry.cc
        TAGGER/DTAGHGeometry.h
        TAGGER/DTAGHGeometry_factory.h
        TAGGER/DTAGHHit.h
        TAGGER/DTAGHHit_factory.cc
        TAGGER/DTAGHHit_factory.h
        TAGGER/DTAGHHit_factory_Calib.cc
        TAGGER/DTAGHHit_factory_Calib.h
        TAGGER/DTAGHTDCDigiHit.h
        TAGGER/DTAGMDigiHit.h
        TAGGER/DTAGMTDCDigiHit.h
        TAGGER/DTAGMGeometry.cc
        TAGGER/DTAGMGeometry.h
        TAGGER/DTAGMGeometry_factory.h
        TAGGER/DTAGMHit.h
        TAGGER/DTAGMHit_factory.cc
        TAGGER/DTAGMHit_factory.h
        TAGGER/DTAGMHit_factory_Calib.cc
        TAGGER/DTAGMHit_factory_Calib.h
        TAGGER/TAGGER_init.cc


        TOF/DTOFDigiHit.h
        TOF/DTOFGeometry.cc
        TOF/DTOFGeometry.h
        TOF/DTOFGeometry_factory.h
        TOF/DTOFHit.h
        TOF/DTOFHit_factory.cc
        TOF/DTOFHit_factory.h
        TOF/DTOFHitMC.h
        TOF/DTOFPaddleHit.h
        TOF/DTOFPaddleHit_factory.cc
        TOF/DTOFPaddleHit_factory.h
        TOF/DTOFPoint.h
        TOF/DTOFPoint_factory.cc
        TOF/DTOFPoint_factory.h
        TOF/DTOFTDCDigiHit.h
        TOF/DTOFTruth.h
        TOF/TOF_init.cc

        TPOL/DTPOLHit.h
        TPOL/DTPOLHit_factory.cc
        TPOL/DTPOLHit_factory.h
        TPOL/DTPOLRingDigiHit.h
        TPOL/DTPOLSectorDigiHit.h
        TPOL/DTPOLTruthHit.h
        TPOL/TPOL_init.cc

        TRACKING/DHelicalFit.cc
        TRACKING/DHelicalFit.h
        TRACKING/DHoughFind.cc
        TRACKING/DHoughFind.h
        TRACKING/DMagneticFieldStepper.cc
        TRACKING/DMagneticFieldStepper.h
        TRACKING/DMatrixPools.cc
        TRACKING/DMCThrown.h
        TRACKING/DMCTrackHit.h
        TRACKING/DMCTrajectoryPoint.h
        TRACKING/DQuickFit.cc
        TRACKING/DQuickFit.h
        TRACKING/DReferenceTrajectory.cc
        TRACKING/DReferenceTrajectory.h
        TRACKING/DRiemannFit.cc
        TRACKING/DRiemannFit.h
        TRACKING/DTrackCandidate.h
        TRACKING/DTrackCandidate_factory.cc
        TRACKING/DTrackCandidate_factory.h
        TRACKING/DTrackCandidate_factory_CDC.cc
        TRACKING/DTrackCandidate_factory_CDC.h
        TRACKING/DTrackCandidate_factory_CDC_or_FDCpseudo.cc
        TRACKING/DTrackCandidate_factory_CDC_or_FDCpseudo.h
        TRACKING/DTrackCandidate_factory_FDC.cc
        TRACKING/DTrackCandidate_factory_FDC.h
        TRACKING/DTrackCandidate_factory_FDCCathodes.cc
        TRACKING/DTrackCandidate_factory_FDCCathodes.h
        TRACKING/DTrackCandidate_factory_FDCpseudo.cc
        TRACKING/DTrackCandidate_factory_FDCpseudo.h
        TRACKING/DTrackCandidate_factory_StraightLine.cc
        TRACKING/DTrackCandidate_factory_StraightLine.h
        TRACKING/DTrackCandidate_factory_THROWN.cc
        TRACKING/DTrackCandidate_factory_THROWN.h
        TRACKING/DTrackFinder.cc
        TRACKING/DTrackFinder.h
        TRACKING/DTrackFinder_factory.h
        TRACKING/DTrackFitter.cc
        TRACKING/DTrackFitter.h
        TRACKING/DTrackFitter_factory.h
        TRACKING/DTrackFitter_factory_ALT1.h
        TRACKING/DTrackFitter_factory_KalmanSIMD.h
        TRACKING/DTrackFitter_factory_KalmanSIMD_ALT1.h
        TRACKING/DTrackFitter_factory_Riemann.h
        TRACKING/DTrackFitter_factory_StraightTrack.h
        TRACKING/DTrackFitterALT1.cc
        TRACKING/DTrackFitterALT1.h
        TRACKING/DTrackFitterKalmanSIMD.cc
        TRACKING/DTrackFitterKalmanSIMD.h
        TRACKING/DTrackFitterKalmanSIMD_ALT1.cc
        TRACKING/DTrackFitterKalmanSIMD_ALT1.h
        TRACKING/DTrackFitterRiemann.cc
        TRACKING/DTrackFitterRiemann.h
        TRACKING/DTrackFitterStraightTrack.cc
        TRACKING/DTrackFitterStraightTrack.h
        TRACKING/DTrackHit.h
        TRACKING/DTrackHitSelector.cc
        TRACKING/DTrackHitSelector.h
        TRACKING/DTrackHitSelector_factory.h
        TRACKING/DTrackHitSelector_factory_ALT1.h
        TRACKING/DTrackHitSelector_factory_ALT2.h
        TRACKING/DTrackHitSelector_factory_THROWN.h
        TRACKING/DTrackHitSelectorALT1.cc
        TRACKING/DTrackHitSelectorALT1.h
        TRACKING/DTrackHitSelectorALT2.cc
        TRACKING/DTrackHitSelectorALT2.h
        TRACKING/DTrackHitSelectorTHROWN.cc
        TRACKING/DTrackHitSelectorTHROWN.h
        TRACKING/DTrackingData.h
        TRACKING/DTrackTimeBased.h
        TRACKING/DTrackTimeBased_factory.cc
        TRACKING/DTrackTimeBased_factory.h
        TRACKING/DTrackTimeBased_factory_StraightLine.cc
        TRACKING/DTrackTimeBased_factory_StraightLine.h
        TRACKING/DTrackTimeBased_factory_THROWN.cc
        TRACKING/DTrackTimeBased_factory_THROWN.h
        TRACKING/DTrackWireBased.h
        TRACKING/DTrackWireBased_factory.cc
        TRACKING/DTrackWireBased_factory.h
        TRACKING/DTrackWireBased_factory_StraightLine.cc
        TRACKING/DTrackWireBased_factory_StraightLine.h
        TRACKING/DTrackWireBased_factory_THROWN.cc
        TRACKING/DTrackWireBased_factory_THROWN.h
        TRACKING/fdc_covariance.cc
        TRACKING/grkuta.cc
        TRACKING/TRACKING_init.cc

        TRD/DGEMDigiWindowRawData.h
        TRD/DGEMHit.h
        TRD/DGEMHit_factory.cc
        TRD/DGEMHit_factory.h
        TRD/DGEMPoint.h
        TRD/DGEMPoint_factory.cc
        TRD/DGEMPoint_factory.h
        TRD/DGEMStripCluster.h
        TRD/DGEMStripCluster_factory.cc
        TRD/DGEMStripCluster_factory.h
        TRD/DTRDDigiHit.h
        TRD/DTRDHit.h
        TRD/DTRDHit_factory.cc
        TRD/DTRDHit_factory.h
        TRD/DTRDPoint.h
        TRD/DTRDPoint_factory.cc
        TRD/DTRDPoint_factory.h
        TRD/DTRDStripCluster.h
        TRD/DTRDStripCluster_factory.cc
        TRD/DTRDStripCluster_factory.h
        TRD/TRD_init.cc

        TRIGGER/DTrigger.h
        TRIGGER/DL3Trigger.h
        TRIGGER/DMCTrigger.h
        TRIGGER/DL1MCTrigger.h
        TRIGGER/DL1Trigger.h
        TRIGGER/DTrigger_factory.cc
        TRIGGER/DTrigger_factory.h
        TRIGGER/DMCTrigger_factory.cc
        TRIGGER/DMCTrigger_factory.h
        TRIGGER/DL3Trigger_factory.cc
        TRIGGER/DL3Trigger_factory.h
        TRIGGER/DL1Trigger_factory.cc
        TRIGGER/DL1Trigger_factory.h
        TRIGGER/DL1MCTrigger_factory.cc
        TRIGGER/DL1MCTrigger_factory.h
        TRIGGER/TRIGGER_init.cc

        TTAB/DTranslationTable.h
        TTAB/DTranslationTable.cc
        TTAB/DTranslationTable_factory.h
        TTAB/DTTabUtilities.cc
        TTAB/DTTabUtilities.h
        TTAB/DTTabUtilities_factory.cc
        TTAB/DTTabUtilities_factory.h
        TTAB/TTab_init.cc

        )

add_library(halld_recon
        ${HALLD_RECON_SOURCES}
        )


target_include_directories(halld_recon PRIVATE . ../include include
        ${CCDB_INCLUDE_DIRS}
        ${ROOT_INCLUDE_DIRS}
        ${XercesC_INCLUDE_DIR}
        ${JANA_INCLUDE_DIR}
        ${EVIO_INCLUDE_DIR}
        ${HDDS_INCLUDE_DIR}
        ${MYSQL_INCLUDE_DIR}
        ${XSTREAM_INCLUDE_DIR}
        ${RCDB_INCLUDE_DIR})

target_link_libraries(halld_recon Threads::Threads
        ${CMAKE_DL_LIBS}
        ${CCDB_LIBRARY}
        ${MYSQL_LIBRARY}
        ${SQLITE_LIBRARY}
        ${JANA_LIBRARY}
        ${EVIO_LIBS}
        ${XercesC_LIBRARY}
        ${EXPAT_LIBRARY}
        ${ROOT_LIBRARIES}
        ${HDDS_LIBRARY}
        xstream)
